k8s/api-server/echo.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-svc
  labels:
    app: echo
spec:
  selector:
    app: echo
  ports:
  - name: nats-client
    port: 4222
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels:
    app: echo
spec:
  selector:
    matchLabels:
      app: echo
  replicas: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: echo
    spec:
      volumes:
      - name: echo-volume
        configMap:
          name: echo-cm
      containers:
      - name: echo
        image: python:3.8
        imagePullPolicy: IfNotPresent
        ports:
        - name: nats-client
          containerPort: 4222
        volumeMounts:
        - name: echo-volume
          mountPath: /app
        command:
        - "/bin/bash"
        - "-c"
        - "pip install -r /app/requirements.txt;
          python /app/main.py"
      terminationGracePeriodSeconds: 30
