k8s/api-server/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-gw
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-vs
spec:
  hosts:
  - "*"
  gateways:
  - test-gw
  http:
  - match:
    - uri:
        exact: /main
    route:
    - destination:
        host: nginx-svc.default.svc.cluster.local
        port:
          number: 8000
